--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/favicon.png">
     <meta property="og:title" content="개발자 이정원 포트폴리오">
     <meta property="og:description" content="밑바닥부터 머나먼 우주까지, 매일 성장하는 개발자 이정원의 흔적">
-    <meta property="og:image" content="https://jungwon-lee-25.github.io/img/stupiduck-og.jpg">
+    <meta property="og:image" content="https://jungwon-lee-25.github.io/img/stupiduck-og.png">
 </head>
 <body>
 
